2010-02-20  David S. Miller  <davem@davemloft.net>

	* configure.ac: Test if linker and assembler properly support
	GOTDATA_OP relocations.
	* configure: Rebuild.
	* config.in: Likewise.
	* config/sparc/sparc.md (UNSPEC_MOVE_GOTDATA): New.
	(movsi_lo_sum_pic): Use %gdop_*() relocs if available.
	(movsi_high_pic): Likewise.
	(movdi_lo_sum_pic): Likewise.
	(movdi_high_pic): Likewise.
	(movsi_pic_gotdata_op): New pattern.
	(movdi_pic_gotdata_op): Likewise.
	* config/sparc/sparc.c (legitimize_pic_address): If flag_pic is 2,
	emit gen_mov{si,di}_pic_gotdata_op for the GOT slot load.
	
2010-02-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43067
	* config/i386/sse.md (xop_mulv2div2di3_low): Change type
	attribute to ssemul.
	(xop_mulv2div2di3_high): Ditto.

2010-02-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/35669
	* c.opt (Wconversion-null): New option.
	* doc/invoke.texi (Wconversion-null): Document.

2010-02-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* common.opt (Wlarger-than-): Add Undocumented.

2010-02-19  Mike Stump  <mikestump@comcast.net>

	* config/t-darwin (gt-darwin.h): Remove as Makefile now handles it.

2010-02-19  Jason Merrill  <jason@redhat.com>

	PR target/40332
	* configure.ac (gcc_cv_as_cfi_advance_working): Check 32-bit advance.
	* configure: Likewise.

2010-02-20  Alan Modra  <amodra@gmail.com>

	PR middle-end/42344
	* cgraph.h (cgraph_make_decl_local): Declare.
	* cgraph.c (cgraph_make_decl_local): New function.
	(cgraph_make_node_local): Use it.
	* cgraphunit.c (cgraph_function_versioning): Likewise.
	* ipa.c (function_and_variable_visibility): Likewise.

2010-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/43121
	* except.c (sjlj_emit_function_enter): Don't call
	add_reg_br_prob_note, instead add REG_BR_PROB note to the last insn
	directly.
	* rtl.h (add_reg_br_prob_note): Remove prototype.

2010-02-19  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR 41779
	* c-common.c (conversion_warning): Remove widening conversions